Fixed the issue of not proper clicking on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,3 @@
     line-height: 0.5;
   }
 }
-
-.lesson {
-  line-height: 2;
-}
